--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://joaosilgo.github.io/joaogomes/">
+    <meta property="og:title" content="João Gomes Portfolio">
+    <meta property="og:description" content="João Gomes Portfolio">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Joaosilgo/joaogomes/master/img/abstract.jpg">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
