--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 hire
                                 me
                             </button>
-                            <a   href="src/JoãoGomes.pdf" class="btn button secondary-button text-uppercase" target="_blank" >
+                            <a   href="src/joaogomes.pdf" class="btn button secondary-button text-uppercase" target="_blank" >
                                 Get cv
                             </a>
 
